# cpu-usage-tracker

./: CMakeLists.txt  README.md  log.txt  main  main.c
src/: analyzer.c  analyzer.h  handler.c  handler.h  logger.c  logger.h  printer.c  printer.h  queue.c  queue.h  reader.c  reader.h  watchdog.c  watchdog.h
tests/: CMakeLists.txt  test_queue  test_queue.c
